<resources>
    <string name="app_name">孩托宝</string>
    <string name="action_settings">Settings</string>
    <string name="login_title_txt">登陆</string>
    <string name="login_register_txt">注册</string>
    <string name="login_forgetPsw_txt">忘记密码</string>
    <string name="login_username_hint">手机号/邮箱/用户名</string>
    <string name="phoneNumber">手机号</string>
    <string name="user">角色</string>
    <string name="login_psw_hint">密码</string>
    <string name="APP_EXIT_TIPS">再按一次退出程序</string>

    <string-array name="userType">
        <item>机构</item>
        <item>老师</item>
        <item>家长</item>
    </string-array>

</resources>
