<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/editRel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/accountRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"

            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/phoneNumber"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/accountEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/account"
                android:background="@null"
                android:hint="@string/phoneNumber"
                android:textSize="15sp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"/>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:background="@color/line1" />
        <RelativeLayout
            android:id="@+id/pwdRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountRel"

            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_psw_hint"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/pwdEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/pwd"
                android:background="@null"
                android:hint="@string/login_psw_hint"
                android:textSize="15sp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"/>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:background="@color/line1" />
        <RelativeLayout
            android:id="@+id/role"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwdRel"

            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/role_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:text="@string/user"
                android:textColor="#000"
                android:textSize="17sp" />
            <Spinner
                android:id="@+id/roleSpinner"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/role_txt"
                android:layout_marginLeft="20dip"
                android:entries="@array/userType"
                />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_user_register"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/login_register_txt"
        android:textColor="#ffffff"
        android:textSize="15sp" />
</LinearLayout>