<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ui_login_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/UI_TopTab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/maincolor">

        <LinearLayout

            android:id="@+id/btn_exit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_back"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/login_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_title_txt"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <LinearLayout
            android:id="@+id/btn_register"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <TextView
                android:id="@+id/login_register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_txt"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/LayeroutContainer"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/login_username" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:ems="10"
                    android:hint="@string/login_username_hint"
                    android:inputType="textPersonName"
                    android:textSize="15sp">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="@color/line1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/login_pass" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:ems="10"
                    android:hint="@string/login_psw_hint"
                    android:inputType="textPersonName"
                    android:password="true"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/login_title_txt"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/login_forgetPsw_txt"
                android:textColor="@color/blue" />
        </LinearLayout>


    </FrameLayout>
</FrameLayout>
